cmake_minimum_required(VERSION 3.16)

project(Qt_QMap_QVariantMap_Sample VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 6.2 COMPONENTS Quick REQUIRED)

qt_add_executable(appQt_QMap_QVariantMap_Sample
    main.cpp
)

qt_add_qml_module(appQt_QMap_QVariantMap_Sample
    URI Qt_QMap_QVariantMap_Sample
    VERSION 1.0
    QML_FILES main.qml
SOURCES SampleQMap.cpp SampleQMap.h SampleQVariantMap.cpp SampleQVariantMap.h
QML_FILES SampleQMap.qml SampleQVariantMap.qml
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(appQt_QMap_QVariantMap_Sample PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appQt_QMap_QVariantMap_Sample
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(appQt_QMap_QVariantMap_Sample
    PRIVATE Qt6::Quick)

include(GNUInstallDirs)
install(TARGETS appQt_QMap_QVariantMap_Sample
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
